--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
+    "simple-icons": "^15.16.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
